Change dropdown to horizontal for better user ergonomics and to prevent content overlay, and amended padding on features in  index accordingly to align with this.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,6 +340,7 @@ footer {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+padding-bottom: 10px;
 }
 
 /************************************************************* About Page*/
@@ -470,11 +471,25 @@ footer {
   }
 
   .navbar-nav {
-    padding-top: 13px;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+  }
+
+ .navbar-nav .nav-item {
+    display: flex;
+    flex-grow: 1;
+    flex-basis: 0;
+    justify-content: center;
   }
 
   .navbar-nav .nav-item .nav-link {
-    padding-right: 15px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin: 0;
   }
 
   .navbar-brand {
@@ -490,7 +505,6 @@ footer {
     transition: max-height 0.3s, opacity 0.2s 0.1s, visibility 0s 0.3s;
 
     max-height: 0;
-    display: block;
     overflow: hidden;
     opacity: 0;
     visibility: hidden;
@@ -512,17 +526,12 @@ footer {
   }
 
   .main-features {
-    padding-top: 25px;
+    padding-top: 35px;
   }
 
   .main-features h1 {
     font-size: 1.5rem;
-    text-align: left;
   }
-
-  /* .main-pitch {
-    padding-top: 0px;
-  } */
 
   .main-pitch h2 {
     font-size: 1rem;
@@ -562,10 +571,6 @@ footer {
 /*  Tablet View */
 
 @media only screen and (min-width: 992px) {
-  .main-features h1 {
-    font-size: 2rem;
-  }
-
   .lower-screen .row {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -576,7 +581,6 @@ footer {
   }
 
   .main-pitch {
-    /* padding: 0; */
     -ms-flex-item-align: stretch;
         -ms-grid-row-align: stretch;
         align-self: stretch;
@@ -585,6 +589,10 @@ footer {
   .main-pitch h2 {
     font-size: 1.75rem;
   }
+
+  .hero-image {
+    padding-bottom: 0px;
+}
 }
 
 /*  Desktop View */
